@@ -19,6 +19,8 @@ peripherals:
  - PWM hardware library: removed alias declarations for enhanced CCP modules (now in device files)
  - SPI library: removed alias declarations for midrange PICs
  - I2C hardware library: removed alias declarations for midrange PICs
+ - ADC: now supports 18F2553, 18F4553, 18F2458, 18F4458, 18F4450, 18F2450
+        18F2550, 18F4550, 18F4455, 18F2455 (except 12-bits resolution channels)
 
 jal extension:
  - added delay_1s
